--- a/react-chat-frontend/package.json
+++ b/react-chat-frontend/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/font": "13.1.1",
+    "@next/font": "^13.1.1",
     "@tanstack/react-query": "^4.20.4",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
@@ -21,6 +21,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "socket.io-client": "^4.5.4",
     "typescript": "4.9.4",
     "zustand": "^4.2.0"
   },
