--- a/react-chat-frontend/package.json
+++ b/react-chat-frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next/font": "^13.1.1",
     "@tanstack/react-query": "^4.20.4",
+    "@tanstack/react-query-devtools": "^4.20.9",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
