--- a/react-chat-frontend/.prettierrc.json
+++ b/react-chat-frontend/.prettierrc.json
@@ -1,11 +1,11 @@
 {
- "singleQuote": true,
- "jsxSingleQuote": true,
- "arrowParens": "always",
- "tabWidth": 2,
- "useTabs": false,
- "jsxBracketSameLine": true,
- "bracketSameLine": true,
- "semi": false,
- "printWidth": 120
+  "singleQuote": true,
+  "jsxSingleQuote": true,
+  "arrowParens": "avoid",
+  "tabWidth": 2,
+  "useTabs": false,
+  "jsxBracketSameLine": true,
+  "bracketSameLine": true,
+  "semi": false,
+  "printWidth": 120
 }
