--- a/react-chat-frontend/package.json
+++ b/react-chat-frontend/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emoji-mart/data": "^1.1.1",
+    "@emoji-mart/react": "^1.1.1",
     "@next/font": "^13.1.1",
     "@tanstack/react-query": "^4.20.4",
     "@tanstack/react-query-devtools": "^4.20.9",
@@ -17,6 +19,7 @@
     "@types/react-dom": "18.0.10",
     "axios": "^1.2.2",
     "dayjs": "^1.11.7",
+    "emoji-mart": "^5.4.0",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
     "next": "13.1.1",
