--- a/react-chat-frontend/package.json
+++ b/react-chat-frontend/package.json
@@ -26,6 +26,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "react-resizable-panels": "^0.0.33",
     "socket.io-client": "^4.5.4",
     "typescript": "4.9.4",
     "zustand": "^4.2.0"
