--- a/react-chat-frontend/.prettierrc.json
+++ b/react-chat-frontend/.prettierrc.json
@@ -1,7 +1,7 @@
 {
   "singleQuote": true,
   "jsxSingleQuote": true,
-  "arrowParens": "avoid",
+  "arrowParens": "always",
   "tabWidth": 2,
   "useTabs": false,
   "jsxBracketSameLine": true,
