--- a/react-chat-frontend/package.json
+++ b/react-chat-frontend/package.json
@@ -12,6 +12,7 @@
     "@emoji-mart/data": "^1.1.1",
     "@emoji-mart/react": "^1.1.1",
     "@next/font": "^13.1.1",
+    "@reduxjs/toolkit": "^1.9.1",
     "@tanstack/react-query": "^4.20.4",
     "@tanstack/react-query-devtools": "^4.20.9",
     "@types/node": "18.11.18",
@@ -26,10 +27,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "react-redux": "^8.0.5",
     "react-resizable-panels": "^0.0.33",
     "socket.io-client": "^4.5.4",
-    "typescript": "4.9.4",
-    "zustand": "^4.2.0"
+    "typescript": "4.9.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
