--- a/react-chat-frontend/package.json
+++ b/react-chat-frontend/package.json
@@ -13,12 +13,10 @@
     "@emoji-mart/react": "^1.1.1",
     "@next/font": "^13.1.1",
     "@reduxjs/toolkit": "^1.9.1",
-    "@tanstack/react-query": "^4.20.4",
-    "@tanstack/react-query-devtools": "^4.20.9",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
-    "axios": "^1.2.2",
+    "async-mutex": "^0.4.0",
     "dayjs": "^1.11.7",
     "emoji-mart": "^5.4.0",
     "eslint": "8.31.0",
@@ -28,7 +26,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
-    "react-resizable-panels": "^0.0.33",
+    "react-resizable-panels": "^0.0.35",
     "socket.io-client": "^4.5.4",
     "typescript": "4.9.4"
   },
