--- a/react-chat-frontend/package.json
+++ b/react-chat-frontend/package.json
@@ -24,6 +24,7 @@
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.42.1",
     "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
     "react-resizable-panels": "^0.0.35",
