--- a/react-chat-frontend/package.json
+++ b/react-chat-frontend/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test:watch": "jest --watch",
+    "test": "jest"
   },
   "dependencies": {
     "@emoji-mart/data": "^1.1.1",
@@ -32,9 +34,13 @@
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
     "autoprefixer": "^10.4.13",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "jest": "^29.4.0",
+    "jest-environment-jsdom": "^29.4.0",
     "postcss": "^8.4.20",
     "tailwindcss": "^3.2.4"
   }
