--- a/react-chat-frontend/package.json
+++ b/react-chat-frontend/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "test:watch": "jest --watch",
-    "test": "jest"
+    "test": "jest",
+    "analyze": "cross-env ANALYZE=true next build"
   },
   "dependencies": {
     "@emoji-mart/data": "^1.1.1",
@@ -34,9 +35,11 @@
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^13.1.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "autoprefixer": "^10.4.13",
+    "cross-env": "^7.0.3",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.4.0",
