--- a/react-chat-frontend/package.json
+++ b/react-chat-frontend/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint",
     "test:watch": "jest --watch",
     "test": "jest",
-    "analyze": "cross-env ANALYZE=true next build"
+    "analyze": "cross-env ANALYZE=true next build",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@emoji-mart/data": "^1.1.1",
@@ -36,6 +38,13 @@
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^13.1.5",
+    "@storybook/addon-essentials": "7.0.0-beta.34",
+    "@storybook/addon-interactions": "7.0.0-beta.34",
+    "@storybook/addon-links": "7.0.0-beta.34",
+    "@storybook/blocks": "7.0.0-beta.34",
+    "@storybook/nextjs": "7.0.0-beta.34",
+    "@storybook/react": "7.0.0-beta.34",
+    "@storybook/testing-library": "0.0.13",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "autoprefixer": "^10.4.13",
@@ -45,6 +54,7 @@
     "jest": "^29.4.0",
     "jest-environment-jsdom": "^29.4.0",
     "postcss": "^8.4.20",
+    "storybook": "7.0.0-beta.34",
     "tailwindcss": "^3.2.4"
   }
 }
