unread count on sidebar contacts

--- a/react-chat-frontend/.eslintrc
+++ b/react-chat-frontend/.eslintrc
@@ -1,5 +1,8 @@
 {
   "extends": ["next", "prettier", "next/core-web-vitals"],
-  "plugins": ["prettier"]
+  "plugins": ["prettier"],
+  "rules": {
+    "@next/next/no-img-element": "off"
+  }
 }
   
