backend test config init, frontend playsound on msg

--- a/nestjs-chat-backend/package.json
+++ b/nestjs-chat-backend/package.json
@@ -11,14 +11,17 @@
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "cross-env NODE_ENV=development nest start --watch",
-    "start:debug": "nest start --debug --watch",
     "start:prod": "cross-env NODE_ENV=production node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "dbpush:dev": "dotenv -e .env.dev prisma db push",
+    "dbpush:prod": "dotenv -e .env.prod prisma db push",
+    "db:restart": "docker compose down && docker compose up -d",
+    "pretest:int": "yarn db:restart",
+    "test:int": "jest -i --no-cache --watch --config jest-int.json"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
@@ -35,6 +38,7 @@
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
     "cross-env": "^7.0.3",
+    "dotenv-cli": "^7.0.0",
     "nanoid": "^3.0.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
