--- a/nestjs-chat-backend/package.json
+++ b/nestjs-chat-backend/package.json
@@ -22,7 +22,9 @@
     "db:restart": "docker compose down && docker compose up -d && timeout /t 5",
     "pretest:int": "yarn db:restart && dotenv -e .env.dev -- prisma migrate reset --force",
     "test:int": "dotenv -e .env.dev -- jest -i --no-cache --watch --config jest-int.json",
-    "dbmigrate:dev": "dotenv -e .env.dev prisma migrate dev --create-only"
+    "dbmigrate:dev": "dotenv -e .env.dev prisma migrate dev --create-only",
+    "studio:dev": "dotenv -e .env.dev prisma studio",
+    "studio:prod": "dotenv -e .env.prod prisma studio"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
