--- a/react-chat-frontend/package.json
+++ b/react-chat-frontend/package.json
@@ -11,7 +11,8 @@
     "test": "jest",
     "analyze": "cross-env ANALYZE=true next build",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "prettier": "prettier --write ./src/**/*.{ts,js,css,tsx,jsx}"
   },
   "dependencies": {
     "@emoji-mart/data": "^1.1.1",
@@ -54,6 +55,8 @@
     "jest": "^29.4.0",
     "jest-environment-jsdom": "^29.4.0",
     "postcss": "^8.4.20",
+    "prettier": "^2.8.3",
+    "prettier-plugin-tailwindcss": "^0.2.2",
     "storybook": "7.0.0-beta.34",
     "tailwindcss": "^3.2.4"
   }
