--- a/react-chat-frontend/package.json
+++ b/react-chat-frontend/package.json
@@ -27,10 +27,13 @@
     "emoji-mart": "^5.4.0",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
+    "i18next": "^22.4.9",
     "next": "13.1.1",
+    "next-i18next": "^13.1.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.42.1",
+    "react-i18next": "^12.1.5",
     "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
     "react-resizable-panels": "^0.0.35",
